feature/optional-top-menu
Change status bar color to white.
Set automaticallyAdjustsScrollViewInsets to false to view controller containing the menu.
Fix state change of button while providing geometry objects.
Provide customization for adjust the screen's scroll offset.
Fix computation of items' content size.
Fix update of items and scroll indicator appearance while selecting the an item from menu.

--- a/HorizontalMenuDemo/HorizontalMenuDemo/Base.lproj/Main.storyboard
+++ b/HorizontalMenuDemo/HorizontalMenuDemo/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--Menu Container View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="MenuContainerViewController" id="BYZ-38-t0r" customClass="MenuContainerViewController" customModule="HorizontalMenuDemo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MenuContainerViewController" automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="MenuContainerViewController" customModule="HorizontalMenuDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
